--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
         .render("#paypal-button-container-P-59V25273NS2947038MCHJHOY"); // Renders the PayPal button
     </script>
     <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var Tawk_API = Tawk_API || {},
         Tawk_LoadStart = new Date();
       (function () {
@@ -96,7 +96,7 @@
         s1.setAttribute("crossorigin", "*");
         s0.parentNode.insertBefore(s1, s0);
       })();
-    </script>
+    </script> -->
     <!--End of Tawk.to Script-->
   </body>
 </html>
