Map and chart Analytics, Dynamic Page title

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <canvas id="myChart" width="400" height="400"></canvas>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -97,6 +99,8 @@
         s0.parentNode.insertBefore(s1, s0);
       })();
     </script> -->
+
     <!--End of Tawk.to Script-->
+    <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
   </body>
 </html>
